<resources>
    <string name="app_name">Proyecto1CM</string>
    <string name="cal_data">Calcular</string>
    <string name="title_main">Solin</string>
    <string name="name_edit">Nombre</string>
    <string name="last_name_edit">Apellidos</string>
    <string name="birth_edit">Fecha de Nacimiento</string>
    <string name="info_app">¿Qué es Solin? \\r\\n Solin</string>
    <string name="greeting_user">Hola,</string>
    <string name="zodiac_aries">Aries</string>
    <string name="rfc_name">RFC</string>
    <string name="zodiac_taurus">Tauro</string>
    <string name="zodiac_gemini">Géminis</string>
    <string name="zodiac_cancer">Cáncer</string>
    <string name="zodiac_leo">Leo</string>
    <string name="zodiac_virgo">Virgo</string>
    <string name="zodiac_libra">Libra</string>
    <string name="zodiac_escorpio">Escorpio</string>
    <string name="zodiac_sagitario">Sagitario</string>
    <string name="zodiac_capr">Capricornio</string>
    <string name="zodiac_acu">Acuario</string>
    <string name="zodiac_pis">Piscis</string>
    <string name="chinese_rat">Rata</string>
    <string name="chinese_Ox">Buey</string>
    <string name="chinese_tiger">Tigre</string>
    <string name="chinese_rabbit">Conejo</string>
    <string name="chinese_dragon">Dragón</string>
    <string name="chinese_snake">Serpiente</string>
    <string name="chinese_horse">Caballo</string>
    <string name="chinese_goat">Cabra</string>
    <string name="chinese_monkey">Mono</string>
    <string name="chinese_rooster">Gallo</string>
    <string name="chinese_dog">Perro</string>
    <string name="chinese_pig">Cerdo</string>
    <string name="age">Edad</string>
    <string name="error_numbers_name">El nombre no puede contener números</string>
    <string name="error_numbers_lstname">Los apellidos no pueden contener números</string>
    <string name="error_1lstname">Se requiere apellido paterno y materno</string>
    <string name="error_empty_name">Se debe llenar el campo del nombre</string>
    <string name="error_empty_lstname">Se debe llenar el campo de los apellidos</string>
    <string name="error_emptyDate">Ingrese una fecha</string>
</resources>