<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_anim"
    android:id="@+id/myLayout"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <!--Título-->
    <TextView
        android:id="@+id/SolinTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginLeft="122dp"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:fontFamily="cursive"
        android:text="@string/title_main"
        android:textColor="@color/title_color"
        android:textSize="90sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--Editar Nombre-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_input"
        style="@style/AppTextField"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:hint="@string/name_edit"
        android:textColorHint="@color/name_color"
        android:gravity="center_vertical"
        app:endIconMode="clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/SolinTxt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/get_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/name_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <!--Editar apellidos-->

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/last_name_input"
        style="@style/AppTextField"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/last_name_edit"
        android:textColorHint="@color/name_color"
        app:endIconMode="clear_text"
        app:hintAnimationEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/get_apellidos"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/name_color" />

    </com.google.android.material.textfield.TextInputLayout>

    <!-- Fecha de Nacimiento -->

    <TextView
        android:id="@+id/birth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/birth_edit"
        android:textSize="16sp"
        android:textColor="@color/name_color"
        android:background="@drawable/btn_bg"
        android:gravity="center_vertical"
        android:paddingLeft="10dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/last_name_input" />

    <!-- Botón para calcular -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginLeft="162dp"
        android:layout_marginTop="558dp"
        android:layout_marginEnd="162dp"
        android:layout_marginRight="162dp"
        android:layout_marginBottom="125dp"
        android:fontFamily="cursive"
        android:text="@string/cal_data"
        android:textAllCaps="false"
        android:textColor="@color/btn_text"
        android:textSize="17sp"
        android:backgroundTint="@color/btn_color_out"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>