<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResultActivity"
    android:orientation="vertical"
    android:id="@+id/activity_res"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp">

        <LinearLayout
            android:id="@+id/layout_usr"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:background="@drawable/bg_anim"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/img_usr"
                android:layout_marginTop="55dp"
                android:layout_gravity="center_horizontal"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:src="@drawable/p02052905"/>

            <TextView
                android:id="@+id/txt_usr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/greeting_user"
                android:textColor="@color/greeting_color"
                android:textSize="30sp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"/>

        </LinearLayout>

    </RelativeLayout>

    <GridLayout
        android:layout_marginTop="15dp"
        android:columnCount="2"
        android:rowCount="2"
        android:alignmentMode="alignMargins"
        android:columnOrderPreserved="false"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_gravity="center"
        android:background="@android:color/transparent">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="8dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/zodiac"
                    android:src="@drawable/aries"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>
                
                <TextView
                    android:id="@+id/zodiac_name"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/card_color"
                    android:textSize="18sp"
                    android:text="@string/zodiac_aries"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="8dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:paddingTop="40dp"
                    android:gravity="center"
                    android:id="@+id/RFC"
                    android:text="@string/rfc_name"
                    android:textSize="20sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:id="@+id/rfc_n"
                    android:layout_marginTop="30dp"
                    android:textColor="@color/card_color"
                    android:textSize="18sp"
                    android:text="@string/rfc_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="8dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/chinese"
                    android:src="@drawable/dog"
                    android:layout_width="80dp"
                    android:layout_height="80dp"/>

                <TextView
                    android:id="@+id/chinese_name"
                    android:layout_marginTop="12dp"
                    android:textColor="@color/card_color"
                    android:textSize="18sp"
                    android:text="@string/chinese_dog"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_rowWeight="1"
            app:cardElevation="8dp"
            app:cardCornerRadius="12dp"
            android:layout_margin="12dp">

            <LinearLayout
                android:orientation="vertical"
                android:padding="16dp"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:paddingTop="40dp"
                    android:gravity="center"
                    android:id="@+id/age"
                    android:text="@string/rfc_name"
                    android:textSize="40sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_marginTop="30dp"
                    android:textColor="@color/card_color"
                    android:textSize="18sp"
                    android:text="@string/age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </GridLayout>

</LinearLayout>